--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=BiblioTook
+
+
+#Configurations BDD (H2)
+# afficher le sql généré par JPA
+spring.jpa.show-sql=true
+
+# rendre accessible la BDD par un console web
+spring.h2.console.enabled=true
+
+# la console web est sur le path /h2
+spring.h2.console.path=/h2
+
+#pour avoir la db en mémoire
+spring.datasource.url=jdbc:h2:mem:testdb
+#pour persister dans des fichiers le contenu de la DB H2 :
+#spring.datasource.url=jdbc:h2:file:~/mondossier/monfichierdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
