--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,17 +5,26 @@ spring.application.name=BiblioTook
 # afficher le sql généré par JPA
 spring.jpa.show-sql=true
 
-# rendre accessible la BDD par un console web
-spring.h2.console.enabled=true
 
-# la console web est sur le path /h2
-spring.h2.console.path=/h2
+#H2
 
-#pour avoir la db en mémoire
-spring.datasource.url=jdbc:h2:mem:testdb
-#pour persister dans des fichiers le contenu de la DB H2 :
-#spring.datasource.url=jdbc:h2:file:~/mondossier/monfichierdb
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# rendre accessible la BDD par un console web
+spring.h2.console.enabled=true
+# la console web est sur le path /h2
+spring.h2.console.path=/h2
+#pour persister dans des fichiers le contenu de la DB H2 :
+#spring.datasource.url=jdbc:h2:file:~/mondossier/monfichierdb
+
+# MYSQL
+#spring.datasource.url=jdbc:mysql://MYSQL_HOST:MYSQL_PORT/bibliotook
+#spring.datasource.url=jdbc:mysql://localhost:3306/bibliotook
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
