commandes pour lancer le projet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=BiblioTook
 
 
 #Configurations BDD (H2)
-# afficher le sql généré par JPA
+# afficher le sql genere par JPA
 spring.jpa.show-sql=true
 
 
