hasher un password . . . ENFIN !

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=BiblioTook
 
+# empeche les erreurs lorsque des objets nulls sont rencontres et que spring securite est actif
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 #Configurations BDD (H2)
 # afficher le sql genere par JPA
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 
 #H2
